# pulse-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: release.yaml
examples/: README.md  ai_enrichment_pipeline.rs  events_live_and_replay.rs  interactive_query.rs  realtime_windowed_aggregation.rs  stream_to_connector.rs  usecase_1_connect_and_list.rs  usecase_2_deploy_velocity_pipeline.rs  usecase_3_interactive_query.rs  usecase_4_events_and_replay.rs  usecase_5_synchronous_decision.rs
src/: client.rs  duplex.rs  error.rs  events.rs  iq.rs  lib.rs  resources.rs  streams.rs
tests/: integration.rs  retry.rs
