[package]
name = "pulse-client"
version = "2.6.0"
edition = "2021"
rust-version = "1.82"
description = "Official Rust client for StreamFlow Pulse — AI Agent Platform"
license = "Apache-2.0"
authors = ["Njong Michael <mike.njo@gmail.com>"]
repository = "https://github.com/olsisoft/streamflow"
homepage = "https://github.com/olsisoft/streamflow"
documentation = "https://docs.rs/pulse-client"
readme = "README.md"
keywords = ["pulse", "streamflow", "ai", "agents", "pipelines"]
categories = ["api-bindings", "asynchronous"]

[lib]
name = "pulse_client"
path = "src/lib.rs"

[dependencies]
# B-098 Phase 5 — three deps total. reqwest is the de facto HTTP client on
# Rust; serde + serde_json the de facto JSON stack. tokio comes in as a
# transitive (reqwest depends on it) — we don't add it explicitly so the
# caller can pick their runtime version.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# B-098 Phase 7 — needed for the SSE event-stream consumer:
#   futures-core: Stream trait that client.events().stream() returns
#   futures-util: StreamExt for caller ergonomics + bytes-stream chunking
#   bytes:        zero-copy buffer accumulation in the SSE parser
futures-core = "0.3"
futures-util = "0.3"
bytes = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
futures-util = "0.3"
