[package]
name = "pulse-client"
version = "2.7.1"
edition = "2021"
rust-version = "1.82"
description = "Official Rust client for StreamFlow Pulse — AI Agent Platform"
license = "Apache-2.0"
authors = ["Njong Michael <mike.njo@gmail.com>"]
repository = "https://github.com/olsisoft/pulse-rs"
homepage = "https://github.com/olsisoft/pulse-rs"
documentation = "https://docs.rs/pulse-client"
readme = "README.md"
keywords = ["pulse", "streamflow", "ai", "agents", "pipelines"]
categories = ["api-bindings", "asynchronous"]

[lib]
name = "pulse_client"
path = "src/lib.rs"

[dependencies]
# B-098 Phase 5 — three deps total. reqwest is the de facto HTTP client on
# Rust; serde + serde_json the de facto JSON stack. tokio comes in as a
# transitive (reqwest depends on it) — we don't add it explicitly so the
# caller can pick their runtime version.
# B-112 — `multipart` enables the ML model-upload form on ModelsResource.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# B-098 Phase 7 — needed for the SSE event-stream consumer:
#   futures-core: Stream trait that client.events().stream() returns
#   futures-util: StreamExt for caller ergonomics + bytes-stream chunking
#   bytes:        zero-copy buffer accumulation in the SSE parser
# B-114 also leans on futures-util's SinkExt/StreamExt for the duplex socket.
futures-core = "0.3"
futures-util = "0.3"
bytes = "1"
# B-114 — duplex WebSocket channel. rustls to match the rustls-tls choice on
# reqwest above (no OpenSSL on the build host); default-features off so we
# don't pull native-tls in transitively.
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "handshake", "rustls-tls-native-roots"] }
# B-114 — the duplex channel stores a `WebSocketStream<MaybeTlsStream<tokio::net::TcpStream>>`
# whose type names `tokio::net::TcpStream`. tokio is already a transitive dep
# (reqwest + tokio-tungstenite pull it); declaring it directly with only the
# `net` feature lets us name the type without inflating the feature set.
tokio = { version = "1", default-features = false, features = ["net", "time"] }

[dev-dependencies]
# `net`/`io-util`/`rt` let the duplex tests spin a real tokio-tungstenite
# server for a round-trip; `time` backs the connect-timeout guard.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "time"] }
wiremock = "0.6"
futures-util = "0.3"
